# real-media-empire

./: .env_template  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  DIRECTOR_PLATFORM_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PPTX_GENERATION.md  PRODUCTION_PLATFORM_SUMMARY.md  README.md  README_TODAY.md  README_UV.md  RESTRUCTURE_PLAN.md  SCENARIO_GENERATION.md  SHARED_LIBRARY.md  VIDEO_PRODUCTION_ANALYSIS.md  WORKSPACE_IMPLEMENTATION_SUMMARY.md  airflow.yaml  environment.yaml  flask.yaml  pyproject.toml  test_pptx_generation.py  test_prompts.py  topic_list.json
.claude/: settings.local.json
.run/: IQI generate.run.xml
director-ui/: .env.example  .gitignore  API_CLIENT_GENERATION.md  ARCHITECTURE.md  ASSET_TRACKING_IMPLEMENTATION.md  BACKEND_LOGGING_FIX.md  CLAUDE.md  DATABASE_SETUP.md  DEVELOPMENT.md  Dockerfile  MIGRATIONS.md  OPENAPI_CLIENT.md  README.md  SETUP_API_KEYS.md  check_backend.sh  docker-compose.yml  fix_aiohttp.bat  pyproject.toml  reset_db.sql  start-dev.sh  start_api.sh
director-ui/alembic/: env.py
director-ui/deployment/: deploy.sh  pdf-link-youtube-to-anything-tg-bot.service  setup.sh
director-ui/frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
director-ui/locales/: en.json  es.json
director-ui/migrations/: add_generation_history_tables.sql
director-ui/src/: cli.py  logging_config.py  main.py
director-ui/tests/: conftest.py  test_all_models_complete.py  test_bundle_service_dao.py  test_content_service_dao.py  test_heygen_provider.py  test_heygen_router.py  test_imports.py  test_models.py  test_postiz_publisher.py  test_postiz_router.py  test_pov_prompts.py  test_processing_service_dao.py  test_trend_research.py  test_veed_provider.py
docs/: ASSET_CENTRIC_SCHEMA.md  CLEAN_SCHEMA_IMPLEMENTATION_PLAN.md  PROJECT_ANALYSIS_AND_IMPROVEMENTS.md  SHOT_FILM_ARCHITECTURE.md  SHOT_MULTIPLE_ASSETS.md  UX_ANALYSIS_AND_IMPROVEMENTS.md
docs/features/: PUBLISHING.md
docs/film-generation/: QUICKSTART.md  README.md
docs/pptx-generation/: USAGE.md
docs/scenario-generation/: IMPLEMENTATION.md  QUICKSTART.md
examples/: README.md  brand_guidelines_example.py  broll_insertion_example.py  content_calendar_example.py  dynamic_editor_example.py  example_shots.json  formatter_example.py  hook_optimizer_example.py  post_production_example.py  publishing_example.py  smart_cropping_example.py  subtitles_example.py  thumbnail_generator_example.py  voice_cloning_example.py
jack/: century_wisdom.yaml  century_wisdom_shorts.yaml  citas_y_palabras.yaml  citas_y_palabras_sabias.yaml  daily_mindset.yaml  daily_mindset_shorts.yaml  infinite_quotes_inspiration.yaml  infinite_quotes_inspiration_shorts.yaml  infinite_quotes_inspiration_v2.yaml  lol.sol  motivation_topics.json  speakers_list.json  speakers_list_v2.json  test.yaml
jack/quotes/: historical_figures.json  leaders.json  motivational_speakers.json  philosophers.json  special_iqi_quotes.json
mediaempire-shared/: pyproject.toml
mediaempire-shared/src/: config.py  features  social
mediaempire-shared/src/features/film/: __init__.py
mediaempire-shared/src/features/film/prompts/: builder.py  lighting.py  shot_types.py  styles.py
mediaempire-shared/src/features/film/providers/: __init__.py  base.py  video_providers.py
mediaempire-shared/src/features/publishing/: manager.py  queue.py
mediaempire-shared/src/features/publishing/adapters/: upload_post.py
mediaempire-shared/src/social/: tg.py  you_tube.py
migrations/: 001_add_workspace_multi_tenancy.sql  README.md
pdf-link-youtube-to-anything-tg-bot/: .env.example  pyproject.toml
pdf-link-youtube-to-anything-tg-bot/config/: prompts.yaml
scheduler/: control_pipeline_dag.py
src/: config.py  jack.py  logging.ini  temp-audio.m4a
src/audio/: audio_processor.py  (+6 more)
stable-diffusion/: Dockerfile  README.md  requirements.txt  run_docker.sh
templates/: create_default_templates.py
tests/: quote_stats.py  test_all_src_models.py  test_markdown_parser.py  test_model_relationships_integration.py  test_pptx_imports.py  test_you_tube.py  text_test.py  txt_clip_test.py
webserver/: _config.py  app.py
(+481 files in other folders)
