[project]
name = "mediaempire-shared"
version = "0.1.0"
description = "Shared features library for Media Empire projects"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "oauth2client>=4.1.3",
    "httplib2>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/features", "src/social", "src/config.py"]
